# timbr_python_SQLAlchemy

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  example.py  http_example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: install-dependencies-and-run-tests.yml
examples/: example.py  pyhive_async_example.py  pyhive_sync_example.py
licenses/: LICENSE-Apache-2.0  LICENSE-GPL-2.0-only  LICENSE-GPL-3.0-only  LICENSE-GPL-3.0-or-later  LICENSE-LGPL-3.0-only  LICENSE-MIT
pytimbr_sqla/: __init__.py  common.py  hive.py  sqlalchemy_timbr.py
pytimbrsqlalchemy/: common.py  hive.py  sqlalchemy_timbr.py
test/: conftest.py  requirements.txt  test_hive_dialect.py  test_timbr_dialect.py  utils.py
thrift/transport/: THttpClient.py
whl/: sasl-0.3.1-cp39-cp39-win_amd64.whl
